added keywords according to edition 2018 (fixes issue #2)

--- a/listings-style.tex
+++ b/listings-style.tex
@@ -20,13 +20,13 @@
 
 \begin{lstlisting}
 // keywords
-break continue else for if loop match return while as const crate enum extern
-fn impl in let mod move mut pub ref Self self static struct super trait type
-unsafe use where
+as break const continue crate dyn else enum extern fn for if impl in let loop
+match mod move mut pub ref return Self self static struct super trait type
+union unsafe use where while
  
 // reserved keywords (for future use)
 abstract alignof become box do final macro offsetof override priv proc pure
-sizeof typeof unsized virtual yield 
+sizeof typeof unsized virtual yield
 
 // strings
 "this is a test"
